<resources>
    <string name="app_name">Demo</string>
    <string name="Upload">Upload</string>
    <string name="Discard">Discard</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="textview">Selected Text Added Here</string>
    <string name="rb1">1st type of font style</string>
    <string name="rb2">2nd type of font style</string>
    <string name="rb3">3rd type of font style</string>
    <string name="rb4">4th type of font style</string>
    <string name="submit">submit</string>
    <string name="dote">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ac">AC</string>
    <string name="open">(</string>
    <string name="close">)</string>
</resources>